--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "cors": "^2.8.6",
     "express": "^5.2.1",
-    "http-proxy-middleware": "^3.0.5"
-  },
-  "devDependencies": {}
+    "http-proxy-middleware": "^3.0.5",
+    "node-fetch": "^3.3.2"
+  }
 }
